#52 Update ConditionalWait and add DesiredState (#54)
* #52 Update ConditionalWait and add DesiredState

* #52 Remove IsThrowingNoSuchElementException from IsElementClickable

* Fix DesiredState

* #52 Add pollinginterval to waitfor

* #52 Fix comments and update ConditionalWait

* #52 Add WaitForTrue and fix comments

* #52 Rename DesiredState parameter

* #19 Add package info

* #19 Add nuspec file

* #19 Update nuspec

--- a/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
+++ b/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+
+    <NuspecFile>$(MSBuildProjectName).nuspec</NuspecFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
