--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,17 +4,15 @@ jobs:
     docker:
       - image: mcr.microsoft.com/dotnet/core/sdk:2.1
 
-    #working_directory: ~/repo
-
     steps:
       - checkout
-
-      - run: 
-          name: Restore packages
-          command:
-            dotnet restore
 
       - run:
           name: Build
           command:
-            dotnet build
+            dotnet build Aquality.Selenium/Aquality.Selenium.sln
+
+      - run:
+          name: Run Tests
+          command:
+            dotnet test Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
