--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,5 +18,5 @@ jobs:
             profile: local
 
       - store_artifacts:
-          path: Log/log.log
+          path: Aquality.Selenium/tests/Aquality.Selenium.Tests/Log/log.log
           destination: log
