#70 Use custom image for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: mcr.microsoft.com/dotnet/core/sdk:2.1
+      - image: autotests/mcr-dotnet-core-browsers:latest
 
     steps:
       - checkout
