--- a/Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+++ b/Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <None Remove="Resources\GetCurrentUrl.js" />
+    <None Remove="Resources\OpenUrlInNewWindow.js" />
     <None Remove="Resources\TestJavaScript.js" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Resources\OpenUrlInNewWindow.js" />
     <EmbeddedResource Include="Resources\GetCurrentUrl.js" />
     <EmbeddedResource Include="Resources\TestJavaScript.js" />
   </ItemGroup>
