--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,3 +20,6 @@ jobs:
       - store_artifacts:
           path: Aquality.Selenium/tests/Aquality.Selenium.Tests/Log/log.log
           destination: log
+          
+      - store_artifacts:
+          path: Aquality.Selenium/tests/Aquality.Selenium.Tests/Log/
