fix combobox's methods signature to resolve #90 and fix #95. rename related javascripts to match the returned value meaning

--- a/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
+++ b/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
@@ -33,8 +33,8 @@
     <EmbeddedResource Include="Resources\JavaScripts\ClickElement.js" />
     <EmbeddedResource Include="Resources\JavaScripts\ElementIsOnScreen.js" />
     <EmbeddedResource Include="Resources\JavaScripts\GetCheckBoxState.js" />
-    <EmbeddedResource Include="Resources\JavaScripts\GetComboBoxText.js" />
-    <EmbeddedResource Include="Resources\JavaScripts\GetComboBoxValues.js" />
+    <EmbeddedResource Include="Resources\JavaScripts\GetComboBoxSelectedText.js" />
+    <EmbeddedResource Include="Resources\JavaScripts\GetComboBoxTexts.js" />
     <EmbeddedResource Include="Resources\JavaScripts\GetElementByXPath.js" />
     <EmbeddedResource Include="Resources\JavaScripts\GetElementText.js" />
     <EmbeddedResource Include="Resources\JavaScripts\GetElementXPath.js" />
