--- a/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
+++ b/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
@@ -5,8 +5,8 @@
 
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>1.0.0-alpha</Version>
-    <Authors>Aquality Committers</Authors>
+    <Version>1.0.0-beta</Version>
+    <Authors>Aquality Automation Committers</Authors>
     <Company>aquality-automation</Company>
     <Description>Wrapper over Selenium WebDriver for .NET</Description>
     <PackageLicenseExpression></PackageLicenseExpression>
