--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,8 @@ trigger:
 
 pool:
   vmImage: 'ubuntu-latest'
+  
+container: autotests/dotnet-core-sdk-browsers:latest
 
 variables:
   buildConfiguration: 'Release'
