--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,10 +19,10 @@ steps:
 - script: dotnet build --configuration $(buildConfiguration) Aquality.Selenium/Aquality.Selenium.sln
   displayName: 'Build - $(buildConfiguration)'
 
-- script: dotnet test Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
-  displayName: 'Run tests'
+#- script: dotnet test Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+#  displayName: 'Run tests'
   
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'NUnit'
-    testResultsFiles: '**/*.xml'
+#- task: PublishTestResults@2
+#  inputs:
+#    testResultsFormat: 'NUnit'
+#    testResultsFiles: '**/*.xml'
