--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
   
 #container: autotests/dotnet-core-sdk-browsers:latest
 
@@ -19,8 +19,8 @@ steps:
 - script: dotnet build --configuration $(buildConfiguration) Aquality.Selenium/Aquality.Selenium.sln
   displayName: 'Build - $(buildConfiguration)'
 
-#- script: dotnet test Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
-#  displayName: 'Run tests'
+- script: dotnet test Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+  displayName: 'Run tests'
   
 #- task: PublishTestResults@2
 #  inputs:
