#18 Override chromedriver version in yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,6 +14,7 @@ pool:
 variables:
   buildConfiguration: 'Release'
   profile: 'local'
+  driverSettings.chrome.webDriverVersion: '75.0.3770.140'
 
 steps:
 - script: dotnet build --configuration $(buildConfiguration) Aquality.Selenium/Aquality.Selenium.sln
