--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,11 +16,25 @@ variables:
   profile: 'local'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration) Aquality.Selenium/Aquality.Selenium.sln
-  displayName: 'Build - $(buildConfiguration)'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
+    projects: Aquality.Selenium/Aquality.Selenium.sln
+    arguments: --configuration $(buildConfiguration)
 
-- script: dotnet test Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
-  displayName: 'Run tests'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'test'
+    projects: Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+    publishTestResults: true
+
+
+
+#- script: dotnet build --configuration $(buildConfiguration) Aquality.Selenium/Aquality.Selenium.sln
+#  displayName: 'Build - $(buildConfiguration)'
+
+#- script: dotnet test Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+#  displayName: 'Run tests'
   
 #- task: PublishTestResults@2
 #  inputs:
