--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,32 +9,32 @@ trigger:
 pool:
   vmImage: 'windows-latest'
   
-#container: autotests/dotnet-core-sdk-browsers:latest
+container: autotests/dotnet-core-sdk-browsers:latest
 
 variables:
   buildConfiguration: 'Release'
   profile: 'local'
 
 steps:
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'build'
-    projects: Aquality.Selenium/Aquality.Selenium.sln
-    arguments: --configuration $(buildConfiguration)
+#- task: DotNetCoreCLI@2
+#  inputs:
+#    command: 'build'
+#    projects: Aquality.Selenium/Aquality.Selenium.sln
+#    arguments: --configuration $(buildConfiguration)
 
-- task: DotNetCoreCLI@2
-  inputs:
-    command: 'test'
-    projects: Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
-    publishTestResults: true
+#- task: DotNetCoreCLI@2
+#  inputs:
+#    command: 'test'
+#    projects: Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+#    publishTestResults: true
 
 
 
-#- script: dotnet build --configuration $(buildConfiguration) Aquality.Selenium/Aquality.Selenium.sln
-#  displayName: 'Build - $(buildConfiguration)'
+- script: dotnet build --configuration $(buildConfiguration) Aquality.Selenium/Aquality.Selenium.sln
+  displayName: 'Build - $(buildConfiguration)'
 
-#- script: dotnet test Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
-#  displayName: 'Run tests'
+- script: dotnet test Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+  displayName: 'Run tests'
   
 #- task: PublishTestResults@2
 #  inputs:
