--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,36 +7,32 @@ trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'windows-latest'
   
-container: autotests/dotnet-core-sdk-browsers:latest
+#container: autotests/dotnet-core-sdk-browsers:latest
 
 variables:
   buildConfiguration: 'Release'
   profile: 'local'
+  driverSettings.chrome.webDriverVersion: '75.0.3770.140'
 
 steps:
-#- task: DotNetCoreCLI@2
-#  inputs:
-#    command: 'build'
-#    projects: Aquality.Selenium/Aquality.Selenium.sln
-#    arguments: --configuration $(buildConfiguration)
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
+    projects: Aquality.Selenium/Aquality.Selenium.sln
+    arguments: --configuration $(buildConfiguration)
 
-#- task: DotNetCoreCLI@2
-#  inputs:
-#    command: 'test'
-#    projects: Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
-#    publishTestResults: true
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'test'
+    projects: Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+    publishTestResults: true
 
 
 
-- script: dotnet build --configuration $(buildConfiguration) Aquality.Selenium/Aquality.Selenium.sln
-  displayName: 'Build - $(buildConfiguration)'
+#- script: dotnet build --configuration $(buildConfiguration) Aquality.Selenium/Aquality.Selenium.sln
+#  displayName: 'Build - $(buildConfiguration)'
 
-- script: dotnet test Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
-  displayName: 'Run tests'
-  
-#- task: PublishTestResults@2
-#  inputs:
-#    testResultsFormat: 'NUnit'
-#    testResultsFiles: '**/*.xml'
+#- script: dotnet test Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+#  displayName: 'Run tests'
