Desable element highligth in default settings

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
@@ -2,7 +2,7 @@
   "browserName": "chrome",
   "isRemote": false,
   "remoteConnectionUrl": "http://localhost:4444/wd/hub",
-  "isElementHighlightEnabled": true,
+  "isElementHighlightEnabled": false,
 
   "driverSettings": {
     "chrome": {
