#18 Change package version to GitVersion.NuGetVersionV2

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
   inputs:
     command: 'build'
     projects: Aquality.Selenium/Aquality.Selenium.sln
-    arguments: -c $(buildConfiguration) /p:Version=$(GitVersion.NuGetVersion)
+    arguments: -c $(buildConfiguration) /p:Version=$(GitVersion.NuGetVersionV2)
 
 - task: SonarCloudAnalyze@1
   displayName: 'Run SonarCloud code analysis'
@@ -49,7 +49,7 @@ steps:
     publishTestResults: true
 
 - task: DotNetCoreCLI@2
-  displayName: 'Create NuGet package v$(GitVersion.NuGetVersion)'
+  displayName: 'Create NuGet package'
   inputs:
     command: 'pack'
     projects: Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
