#18 Modify azure pipeline to create a package (#128)
* #18 Modify azure pipeline to create a package

* #18 Fix Version parameter

* #18 Add GitVersion task to pipeline

* #18 Add display names to azure tasks

* #18 Add GitVersion.yml

* #18 Change package version to GitVersion.NuGetVersionV2

* #18 Change package version to NuGetVersion

--- a/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
+++ b/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
@@ -5,7 +5,6 @@
 
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <Version>1.0.4-beta</Version>
     <Authors>aquality automation committers</Authors>
     <Company>aquality automation</Company>
     <Description>Wrapper over Selenium WebDriver for .NET</Description>
@@ -15,6 +14,7 @@
     <PackageTags>selenium webdriver browser automation</PackageTags>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Copyright>Copyright 2019 Aquality Automation</Copyright>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
