--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,11 @@ variables:
   profile: 'azure'
 
 steps:
+- task: GitVersion@5
+  displayName: 'Run GitVersion'
+  inputs:
+    runtime: 'core'
+
 - task: SonarCloudPrepare@1
   displayName: 'Prepare SonarCloud analysis'
   inputs:
@@ -21,11 +26,11 @@ steps:
       sonar.coverage.exclusions=**/**
 
 - task: DotNetCoreCLI@2
-  displayName: 'Build solution'
+  displayName: 'Build solution - $(buildConfiguration)'
   inputs:
     command: 'build'
     projects: Aquality.Selenium/Aquality.Selenium.sln
-    arguments: --configuration $(buildConfiguration)
+    arguments: -c $(buildConfiguration) /p:Version=$(GitVersion.NuGetVersion)
 
 - task: SonarCloudAnalyze@1
   displayName: 'Run SonarCloud code analysis'
@@ -40,10 +45,18 @@ steps:
   inputs:
     command: 'test'
     projects: '**/*Tests*/*.csproj'
-    arguments: --configuration $(buildConfiguration)
+    arguments: -c $(buildConfiguration) --no-build
     publishTestResults: true
 
+- task: DotNetCoreCLI@2
+  displayName: 'Create NuGet package'
+  inputs:
+    command: 'pack'
+    projects: Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
+    arguments: -c $(buildConfiguration) --no-build -o $(build.artifactStagingDirectory)
+
 - task: PublishBuildArtifacts@1
+  displayName: 'Publish build artifacts'
   inputs:
     PathtoPublish: '$(system.defaultworkingdirectory)'
     ArtifactName: 'sources'
